@@ -1,3 +1,10 @@
+2009-01-23  Eric Blake  <ebb9@byu.net>
+
+	Use no-arg macros via AC_REQUIRE for consistency.
+	* m4/init.m4 (AM_INIT_AUTOMAKE): Require, rather than directly
+	expand, AM_PROG_INSTALL_SH and AM_PROG_INSTALL_STRIP.
+	* configure: Regenerate.
+
 2009-01-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Bump copyright years.
